--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -33,6 +33,11 @@
               <td><%= id %></td>
               <td><%= urls[id] %></td>
               <td>
+                <form method="POST">
+                  <button type="submit" class="btn"><a href="<%= `/urls/${id}` %>">Edit</a></button>
+                </form>
+              </td>
+              <td>
                 <form method="POST" action="<%= `/urls/${id}/delete` %>">
                   <button type="submit" class="btn btn-danger">Delete</button>
                 </form>
