--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -34,12 +34,12 @@
               <td><%= urls[id] %></td>
               <td>
                 <form method="POST">
-                  <button type="submit" class="btn"><a href="<%= `/urls/${id}` %>">Edit</a></button>
+                  <button type="submit" class="btn btn-outline-primary"><a href="<%= `/urls/${id}` %>">Edit</a></button>
                 </form>
               </td>
               <td>
                 <form method="POST" action="<%= `/urls/${id}/delete` %>">
-                  <button type="submit" class="btn btn-danger">Delete</button>
+                  <button type="submit" class="btn btn-outline-danger">Delete</button>
                 </form>
               </td>
             </tr>
