--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -13,9 +13,17 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+      <div class="navbar-nav d-flex justify-content-between w-100">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <!-- Login Form -->
+        <form action="/login" method="POST" class="form-inline ml-auto">
+          <div class="form-group">
+            <label for="username" class="sr-only">Username:</label>
+            <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+          </div>
+          <button type="submit" class="btn btn-outline-dark ml-2">Login</button>
+        </form>
       </div>
     </div>
   </nav>
