--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -33,6 +33,11 @@
             </form>
           </div>
         <% } %>
+        <div class="d-flex align-items-center">
+          <form action="/register" method="GET" class="form-inline ml-auto">
+            <button type="submit" class="btn btn-outline-dark ml-2">Register</button>
+          </form>
+        </div>
       </div>
     </div>
   </nav>
