--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,17 +17,17 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         <!-- Login Form -->
-        <% if (!username) { %>
+        <% if (!user) { %>
           <form action="/login" method="POST" class="form-inline ml-auto">
             <div class="form-group">
-              <label for="username" class="sr-only">Username:</label>
-              <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+              <label for="email" class="sr-only">Email:</label>
+              <input type="text" class="form-control" id="email" name="email" placeholder="User ID">
             </div>
             <button type="submit" class="btn btn-outline-dark ml-2">Login</button>
           </form>
         <% } else { %>
           <div class="d-flex align-items-center">
-            Logged in as: <%= username %>!
+            Logged in as: <%= user.email %>!
             <form action="/logout" method="POST" class="form-inline ml-auto">
               <button type="submit" class="btn btn-outline-dark ml-2">Logout</button>
             </form>
