--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,11 +18,7 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         <!-- Login Form -->
         <% if (!user) { %>
-          <form action="/login" method="POST" class="form-inline ml-auto">
-            <div class="form-group">
-              <label for="email" class="sr-only">Email:</label>
-              <input type="text" class="form-control" id="email" name="email" placeholder="User ID">
-            </div>
+          <form action="/login" method="GET" class="form-inline ml-auto">
             <button type="submit" class="btn btn-outline-dark ml-2">Login</button>
           </form>
         <% } else { %>
