--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,11 +26,13 @@
       <div class="d-flex flex-column align-items-center">
         <h4>Login</h4>
         <form method="POST" action="/login" class="form-inline d-flex flex-column align-items-center">
-          <div class="form-group">
+          <div class="form-group d-flex flex-column">
+            <div>Email address</div>
             <label for="email" class="sr-only">Email:</label>
             <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
           </div>
-          <div class="form-group">
+          <div class="form-group d-flex flex-column">
+            <div>Password</div>
             <label for="password" class="sr-only">Password:</label>
             <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
           </div>
