--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -30,7 +30,7 @@
         <tbody>
           <% for (let id in urls) { %>
             <tr>
-              <td><%= id %></td>
+              <td><a href="/u/<%= id %>"><%= id %></a></td>
               <td><%= urls[id].longURL %></td>
               <td>
                 <form method="GET">
